force-app/main/default/src/objects/MVN_Claim__c/MVN_Claim__c.object-meta.xml
<CustomObject>
    <description>Stores the details of submitted and processed claims.</description>
    <label>Claim</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>