force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>MVN_Care_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Plan</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>