force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Care_Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>MVN_Care_Plan_Number__c</fullName>
    <description>Returns the Case Number of the record&apos;s parent Care Plan.</description>
    <formula>MVN_Care_Plan__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Plan Number</label>
    <type>Text</type>
</CustomField>