force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Claim_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Claim_Closed_Date__c</fullName>
    <description>Represents the date a claim is either rejected or closed and approved and a payment request made to a financial institution.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Represents the date a claim is either rejected or closed and approved and a payment request made to a financial institution.</inlineHelpText>
    <label>Claim Closed Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>