force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Claim_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Claim_Create_Date__c</fullName>
    <description>Date ConnectiveRx enters the claim into the system for processing.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date ConnectiveRx enters the claim into the system for processing.</inlineHelpText>
    <label>Claim Create Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>