force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Claim_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Claim_Id__c</fullName>
    <description>ConnectiveRx Claim ID.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>