force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Claim_Id_Auth_Number__c.field-meta.xml
<CustomField>
    <fullName>MVN_Claim_Id_Auth_Number__c</fullName>
    <description>Used in Claims related lists to display the value for Claim Id or Claim Authorization Number stored across different fields depending on record type.</description>
    <formula>CASE(RecordType.DeveloperName,
&quot;MVN_Copay_Medical_Claim&quot;, MVN_Claim_Id__c,
&quot;MVN_Copay_Pharmacy_Claim&quot;, MVN_Claim_Authorization_Number__c,
null)</formula>
    <label>Claim Id / Auth Number</label>
    <type>Text</type>
</CustomField>