force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Claim_Outcome__c.field-meta.xml
<CustomField>
    <fullName>MVN_Claim_Outcome__c</fullName>
    <description>A – Approved Claim, R – Rejected Claim</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A – Approved Claim, R – Rejected Claim</inlineHelpText>
    <label>Claim Outcome</label>
    <length>1</length>
    <type>Text</type>
</CustomField>