force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Claim_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Claim_Receipt_Date__c</fullName>
    <description>Date the claim was received by ConnectiveRx.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the claim was received by ConnectiveRx.</inlineHelpText>
    <label>Claim Receipt Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>