force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Closed_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Closed_Processed_Date__c</fullName>
    <description>Used in Claims related lists to display the value for Claim Closed Date or Date Processed stored across different fields depending on record type.</description>
    <formula>CASE(RecordType.DeveloperName,
&quot;MVN_Copay_Medical_Claim&quot;, MVN_Claim_Closed_Date__c,
&quot;MVN_Copay_Pharmacy_Claim&quot;, MVN_Date_Processed__c,
null)</formula>
    <label>Closed / Processed Date</label>
    <type>Text</type>
</CustomField>