force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Copay_Assistance_Program__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Assistance_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Copay Assistance Program</label>
    <referenceTo>PJN_Assistance_Program__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>