force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Copay_Before_Benefit_Applied__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Before_Benefit_Applied__c</fullName>
    <description>Patient responsibility (after primary; before copay). This is required for approved claims only. Rejected claims may or may not have this available.</description>
    <inlineHelpText>Patient responsibility (after primary; before copay). This is required for approved claims only. Rejected claims may or may not have this available.</inlineHelpText>
    <label>Copay Before Benefit Applied</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>