force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Copay_Coinsurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Coinsurance_Amount__c</fullName>
    <description>Amount in $ paid by primary insurance. This is required for approved claims only. Rejected claims may or may not have this available.</description>
    <inlineHelpText>Amount in $ paid by primary insurance. This is required for approved claims only. Rejected claims may or may not have this available.</inlineHelpText>
    <label>Copay/Coinsurance Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>