force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Copay_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Member_Id__c</fullName>
    <description>Copay Member Id of the Copay Assistance Program associated to this Claim.</description>
    <formula>MVN_Copay_Assistance_Program__r.MVN_Copay_Member_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Copay Member Id of the Copay Assistance Program associated to this Claim.</inlineHelpText>
    <label>Copay Member Id</label>
    <type>Text</type>
</CustomField>