force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_CPT_Code__c.field-meta.xml
<CustomField>
    <fullName>MVN_CPT_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CPT Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>