force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_CPT_Modifier_Codes__c.field-meta.xml
<CustomField>
    <fullName>MVN_CPT_Modifier_Codes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CPT/Modifier Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>