force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Date_Of_Fill__c.field-meta.xml
<CustomField>
    <fullName>MVN_Date_Of_Fill__c</fullName>
    <description>Rx Date of Service.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Rx Date of Service.</inlineHelpText>
    <label>Date Of Fill</label>
    <length>10</length>
    <type>Text</type>
</CustomField>