force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Date_of_Service__c.field-meta.xml
<CustomField>
    <fullName>MVN_Date_of_Service__c</fullName>
    <description>Required for approved claims only. Rejected claims may or may not have this available.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Required for approved claims only. Rejected claims may or may not have this available.</inlineHelpText>
    <label>Date of Service</label>
    <length>10</length>
    <type>Text</type>
</CustomField>