force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Date_of_Service_Fill__c.field-meta.xml
<CustomField>
    <fullName>MVN_Date_of_Service_Fill__c</fullName>
    <description>Used in Claims related lists to display the value for Date of Service stored across different fields depending on record type.</description>
    <formula>CASE(RecordType.DeveloperName, 
&quot;MVN_Copay_Medical_Claim&quot;, MVN_Date_of_Service__c, 
&quot;MVN_Copay_Pharmacy_Claim&quot;, MVN_Date_Of_Fill__c,
&quot;MVN_Insurance_Claim&quot;, IF(NOT(ISBLANK(MVN_Date_of_Service_myRARE__c)),
TEXT(MONTH(MVN_Date_of_Service_myRARE__c))+&quot;/&quot; +TEXT(DAY(MVN_Date_of_Service_myRARE__c))+&quot;/&quot; +TEXT(YEAR(MVN_Date_of_Service_myRARE__c)),null),
null)</formula>
    <label>Date of Service / Fill</label>
    <type>Text</type>
</CustomField>