force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Date_of_Service_myRARE__c.field-meta.xml
<CustomField>
    <fullName>MVN_Date_of_Service_myRARE__c</fullName>
    <description>Date of Service captured by end users for Insurance Claims and Copay Medical Claims.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of Service recorded by myRARE for a reviewed Copay Medical Claim or for an Insurance Claim myRARE is providing support with.</inlineHelpText>
    <label>Date of Service (myRARE)</label>
    <type>Date</type>
</CustomField>