force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Date_Of_Service_myRare_String__c.field-meta.xml
<CustomField>
    <fullName>MVN_Date_Of_Service_myRare_String__c</fullName>
    <description>String value of the Date of Service myRare date field.</description>
    <formula>IF(
ISBLANK(MVN_Date_of_Service_myRARE__c),
MVN_Date_of_Service__c,
TEXT(MONTH(MVN_Date_of_Service_myRARE__c))+&quot;/&quot; +TEXT(DAY(MVN_Date_of_Service_myRARE__c))+&quot;/&quot; +TEXT(YEAR(MVN_Date_of_Service_myRARE__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Of Service myRare String</label>
    <type>Text</type>
</CustomField>