force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Date_Processed__c.field-meta.xml
<CustomField>
    <fullName>MVN_Date_Processed__c</fullName>
    <description>Date that the claim was processed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date that the claim was processed.</inlineHelpText>
    <label>Date Processed</label>
    <length>12</length>
    <type>Text</type>
</CustomField>