force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Date_Written__c.field-meta.xml
<CustomField>
    <fullName>MVN_Date_Written__c</fullName>
    <description>Date prescription was written.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date prescription was written.</inlineHelpText>
    <label>Date Written</label>
    <length>10</length>
    <type>Text</type>
</CustomField>