force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Days_Supply__c.field-meta.xml
<CustomField>
    <fullName>MVN_Days_Supply__c</fullName>
    <description>Number of days the medication will last when used as prescribed.</description>
    <inlineHelpText>Number of days the medication will last when used as prescribed.</inlineHelpText>
    <label>Days Supply</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>