force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>MVN_Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expenses incurred more than 120 days prior to program approval</fullName>
            </value>
            <value>
                <fullName>Expenses incurred after program term of eligibility end</fullName>
            </value>
            <value>
                <fullName>Expenses incurred after annual benefit limit met</fullName>
            </value>
            <value>
                <fullName>Expenses for supplies, procedures, or physician-related services</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Non-product-specific copays, co-insurance, or deductibles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>