force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_EOB_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_EOB_Date__c</fullName>
    <description>Date of the EOB for the claim. Required for approved claims.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of the EOB for the claim. Required for approved claims.</inlineHelpText>
    <label>EOB Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>