force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Expected_Response_Time_Min__c.field-meta.xml
<CustomField>
    <fullName>MVN_Expected_Response_Time_Min__c</fullName>
    <label>Expected Response Time Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>