force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Member_Plan__c.field-meta.xml
<CustomField>
    <fullName>MVN_Member_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Member Plan the Claim is related to.</description>
    <label>Member Plan</label>
    <referenceTo>PJN_Member_Plan__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>