force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Missing_Information__c.field-meta.xml
<CustomField>
    <fullName>MVN_Missing_Information__c</fullName>
    <description>Missing information required to process the reimbursement request.</description>
    <inlineHelpText>Missing information required to process the reimbursement request.</inlineHelpText>
    <label>Missing Information</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date of Service</fullName>
            </value>
            <value>
                <fullName>Check Mailing Address</fullName>
            </value>
            <value>
                <fullName>CMS-1500 / CMS-1350 Claim Form</fullName>
            </value>
            <value>
                <fullName>Explanation of Benefits</fullName>
            </value>
            <value>
                <fullName>Reimbursement Amount</fullName>
            </value>
            <value>
                <fullName>Check Payable To</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>