force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_NDC__c.field-meta.xml
<CustomField>
    <fullName>MVN_NDC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NDC</label>
    <length>19</length>
    <type>Text</type>
</CustomField>