force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_New_Refill_Code__c.field-meta.xml
<CustomField>
    <fullName>MVN_New_Refill_Code__c</fullName>
    <description>Value as submitted by the pharmacy. 0 = New, otherwise it’s the refill number.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Value as submitted by the pharmacy. 0 = New, otherwise it’s the refill number.</inlineHelpText>
    <label>New Refill Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>