force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Number_Of_Refills__c.field-meta.xml
<CustomField>
    <fullName>MVN_Number_Of_Refills__c</fullName>
    <description>Value as submitted by the pharmacy. Total number of refills authorized, or 0 if none.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Value as submitted by the pharmacy. Total number of refills authorized, or 0 if none.</inlineHelpText>
    <label>Number Of Refills</label>
    <length>2</length>
    <type>Text</type>
</CustomField>