force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Number_of_Units_Billed__c.field-meta.xml
<CustomField>
    <fullName>MVN_Number_of_Units_Billed__c</fullName>
    <label>Number of Units Billed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>