force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Outcome_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Outcome_Transaction_Type__c</fullName>
    <description>Used in Claims related lists to display the value for Claim Outcome or Transaction Type stored across different fields depending on record type.</description>
    <formula>CASE(RecordType.DeveloperName,
&quot;MVN_Copay_Medical_Claim&quot;, MVN_Claim_Outcome__c,
&quot;MVN_Copay_Pharmacy_Claim&quot;, MVN_Transaction_Type__c,
&quot;MVN_Insurance_Claim&quot;, TEXT(MVN_Outcome__c),
null)</formula>
    <label>Outcome / Transaction Type</label>
    <type>Text</type>
</CustomField>