force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Patient_Benefit__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Benefit__c</fullName>
    <description>Amount coupon/voucher/debit card covered.</description>
    <inlineHelpText>Amount coupon/voucher/debit card covered.</inlineHelpText>
    <label>Patient Benefit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>