force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Patient_Program_Benefit__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Program_Benefit__c</fullName>
    <description>Helper field to store either the Patient Benefit or Program Benefit value depending on the Claim Record Type used for use in Flow.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient - Program Benefit</label>
    <length>25</length>
    <type>Text</type>
</CustomField>