force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Payment_Date__c</fullName>
    <description>Date that a check was dated (i.e., check number returned from bank) or the date on which an EFT trace number was generated at the bank. This information will be delivered in a file that comes after the initial claim record is delivered as this date is not known at the time of approval of a claim. Rejected claims will not ever get a date assigned in this field as no check or EFT payment will be made for rejected claims. Only claims with claim outcome = A (Approved) will ever have this field populated.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date that a check was dated (i.e., check number returned from bank) or the date on which an EFT trace number was generated at the bank. This information will be delivered in a file that comes after the initial claim record is delivered as this date is not known at the time of approval of a claim. Rejected claims will not ever get a date assigned in this field as no check or EFT payment will be made for rejected claims. Only claims with claim outcome = A (Approved) will ever have this field populated.</inlineHelpText>
    <label>Payment Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>