force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Payment_Type__c</fullName>
    <description>Required for approved claims only.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Required for approved claims only.</inlineHelpText>
    <label>Payment Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>