force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Pharmacy_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>MVN_Pharmacy_Transaction_Fee__c</fullName>
    <description>Pharmacist handling fee.</description>
    <inlineHelpText>Pharmacist handling fee.</inlineHelpText>
    <label>Pharmacy Transaction Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>