force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Program_Benefit__c.field-meta.xml
<CustomField>
    <fullName>MVN_Program_Benefit__c</fullName>
    <description>Amount paid by the copay program. This is required for approved claims only. Rejected claims may or may not have this available.</description>
    <inlineHelpText>Amount paid by the copay program. This is required for approved claims only. Rejected claims may or may not have this available.</inlineHelpText>
    <label>Program Benefit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>