force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Record_Type_Name__c</fullName>
    <description>Returns the record type name of the claim.</description>
    <formula>RecordType.Name</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>