force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>MVN_Rejected_Reason__c</fullName>
    <description>This is required for rejected claims only. This field will contain the text from the selected rejection reason.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is required for rejected claims only. This field will contain the text from the selected rejection reason.</inlineHelpText>
    <label>Rejected Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>