force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>MVN_Review_Outcome__c</fullName>
    <description>Outcome of the completeness and eligibility review of the medical copay claim prior to submission for processing by the copay vendor.</description>
    <inlineHelpText>Outcome of the completeness and eligibility review of the medical copay claim prior to submission for processing by the copay vendor.</inlineHelpText>
    <label>Review Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Missing Information</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>