force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Submission_Method__c.field-meta.xml
<CustomField>
    <fullName>MVN_Submission_Method__c</fullName>
    <description>E=Electronic; M=Manual</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>E=Electronic; M=Manual</inlineHelpText>
    <label>Submission Method</label>
    <length>1</length>
    <type>Text</type>
</CustomField>