force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Support_Request_Details__c.field-meta.xml
<CustomField>
    <fullName>MVN_Support_Request_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Support Request Details</label>
    <type>TextArea</type>
</CustomField>