force-app/main/default/src/objects/MVN_Claim__c/fields/MVN_Total_Amount_Billed__c.field-meta.xml
<CustomField>
    <fullName>MVN_Total_Amount_Billed__c</fullName>
    <label>Total Amount Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>