force-app/main/default/src/objects/MVN_Claim__c/recordTypes/MVN_Copay_Medical_Claim.recordType-meta.xml
<RecordType>
    <fullName>MVN_Copay_Medical_Claim</fullName>
    <active>true</active>
    <label>Copay Medical Claim</label>
</RecordType>