force-app/main/default/src/objects/MVN_Claim__c/recordTypes/MVN_Copay_Pharmacy_Claim.recordType-meta.xml
<RecordType>
    <fullName>MVN_Copay_Pharmacy_Claim</fullName>
    <active>true</active>
    <label>Copay Pharmacy Claim</label>
</RecordType>