force-app/main/default/src/objects/MVN_Claim__c/recordTypes/MVN_Insurance_Claim.recordType-meta.xml
<RecordType>
    <fullName>MVN_Insurance_Claim</fullName>
    <active>true</active>
    <label>Insurance Claim</label>
</RecordType>